Fix overflow with nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ header {
 }
 nav ul {
   background: transparent;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   list-style: none;
